# copilot-demo

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py  navigator_page.py  resolver_page.py  strategist_page.py
brains/navigator/: answerer.py  retriever.py
brains/resolver/: answerer.py  reranker.py  retriever.py
brains/strategist/: executor.py  sql_agent.py  summariser.py  visualiser.py
data/: seed.py  seed_navigator.py  seed_resolver.py
data/docs/: fb360_link_feature.md  fb360_prioritise_review.md  fb360_revenue_opportunity.md  fb360_search_feedback.md  fb360_submit_feedback.md  uat_close_resolve.md  uat_escalate_issue.md  uat_link_feature.md  uat_search_issues.md  uat_submit_issue.md
prompts/: navigator_system.txt  resolver_system.txt  sql_system.txt
schema/: schema.sql
shared/: config.py  ui.py
